Add barbarian class and subclass configurations

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,12 @@ plugins/**
 !plugins/Skript/
 !plugins/Skript/scripts/
 !plugins/Skript/scripts/**
+!plugins/ProSkillAPI/
+!plugins/ProSkillAPI/**
+!plugins/MythicMobs/
+!plugins/MythicMobs/**
+!plugins/LuckPerms/
+!plugins/LuckPerms/**
 !plugins/*.yml       # manter YAMLs principais de plugins (caso queira versionar configs)
 !plugins/*.json
 !plugins/**/*.sk     # versionar scripts do Skript quando necessario
