--- a/plugins/RacesEffects/races/elfo_drow.yml
+++ b/plugins/RacesEffects/races/elfo_drow.yml
@@ -1,8 +1,7 @@
 # Raça: Drow
-# Fantasia: elfos sombrios com magia feérica e vulnerabilidade à luz.
 race_id: elfo_drow
 name: "Drow"
-identity: "Intrigantes subterrâneos que dominam escuridão e revelações feéricas."
+identity: "Elfos sombrios que governam sob a lua, dominando sombras e revelações feéricas."
 luckperms:
   required: "race_elfo.drow"
   inherit: "race_elfo"
@@ -10,52 +9,58 @@ tags:
   - elf
 placeholders:
   racial_cd_main: "{cooldown:skill_luzes_feericas}"
+  racial_cd_shadow: "{cooldown:skill_passo_umbratico}"
 passives:
   visao_no_escuro_superior:
-    name: "Visão Superior"
+    name: "Visão no Escuro Superior"
     type: darkvision
     trigger: light_level:low
     duration: 30
     cooldown: 45
     uptime_cap: 0.6
-    range: 24
-    description: "Visão no escuro de 24 blocos em ambientes com luz ≤7."
-  fragilidade_a_luz:
-    name: "Fragilidade à Luz"
+    range: 26
+    description: "Visão escura ampliada (26 blocos) em baixa luminosidade."
+  penalidade_luz_solar:
+    name: "Penalidade de Luz Solar"
     type: sunlight_debuff
     trigger: light_level:high
-    duration: 12
-    cooldown: 30
+    duration: 10
+    cooldown: 0
     uptime_cap: 0.6
     modifiers:
-      accuracy_reduction: 0.1
-      damage_taken: 0.08
-    description: "Sob luz solar direta perde 10% de precisão e recebe 8% dano extra."
+      accuracy_reduction: 0.05
+      spellpower_reduction: 0.05
+    description: "Sob sol direto perde 5% de precisão e 5% de potência de conjuração."
+  sutileza_sombria:
+    name: "Sutileza Sombria"
+    type: evasion_boost
+    trigger: light_level:low
+    duration: 15
+    cooldown: 35
+    uptime_cap: 0.6
+    evasion_bonus: 0.05
+    description: "Em baixa luz recebe +5% evasão; decai instantaneamente se exposto a brilho intenso."
 actives:
   luzes_feericas:
     name: "Luzes Feéricas"
     skill: LuzesFeericas
     cooldown: 75
     charges: 1
-    description: "Marca alvo em 8 blocos por 6s, removendo furtividade e aplicando debuff de evasão."
-  manto_sombras:
-    name: "Manto das Sombras"
-    skill: MantoSombras
-    cooldown: 120
+    description: "Revela e marca inimigos em 7 blocos por 8s."
+  passo_umbratico:
+    name: "Passo Umbrático"
+    skill: PassoUmbratico
+    cooldown: 60
     charges: 1
-    description: "Cria cúpula sombria de 6 blocos por 8s; reduz luz ambiente e ativa Visão Superior instantaneamente."
-resistances:
-  necrotic:
-    base: 0.1
-    max: 0.35
-    notes: "Apenas em áreas escuras; aplicar DR com classes de sombra."
+    description: "Teleporta 6 blocos através de sombras, ganhando 2s de invisibilidade parcial."
+resistances: {}
 synergy_notes:
-  - "Build saudável: Ladino sombrio utilizando Luzes Feéricas para suporte, compensando fragilidade solar."
-  - "Restrição: habilidades de invisibilidade fortes perdem 30% de duração enquanto Manto estiver ativo para evitar abuso."
+  - "Jogar em cavernas mantém evasão controlada enquanto a penalidade solar garante contrapeso em superfície."
+  - "Luzes Feéricas previne invis chain e abre janelas para aliados sem virar lock."
 tests:
   pve:
-    - "Patrulha subterrânea enfrentando patrulhas goblins, garantir uptime de Visão ≤60%."
-    - "Evento em superfície com luz intensa para validar debuff de Fragilidade (dano recebido +8%)."
+    - "Run subterrânea monitorando uptime de Visão e Evasão ≤60%."
+    - "Evento em superfície sob sol: medir queda de precisão e conjuração (-5%)."
   pvp:
-    - "Arena noturna vs ranger furtivo: Luzes Feéricas revela e garante kill em ≥15s."
-    - "Batalha em campo aberto diurno, medir perda de DPS de 10% e necessidade de cobertura."
+    - "Arena noturna: Luzes Feéricas deve revelar assassinos invis por 8s com CD 75s."
+    - "Campo aberto diurno: confirmar penalidade ativa e necessidade de cobertura."
