--- a/plugins/RacesEffects/config.yml
+++ b/plugins/RacesEffects/config.yml
@@ -36,7 +36,7 @@ tags:
   elf: "race_elfo"
   gnome: "race_gnomo"
   halfling: "race_halfling"
-  human: "race_humano"
+  human: "race_human"
   halfelf: "race_meioelfo"
   halforc: "race_meioorc"
   tiefling: "race_tiefling"
